# audio-translator

./: .gitignore  README.md  pyproject.toml
src/: bot.py
src/backend/: __init__.py  agent.py  pipeline.py  services.py  tools.py  tracing.py
src/ui/: __init__.py  entrypoint.py  runner.py  transport.py
